fix navbar spacing, add input styling to index.css

--- a/reactGPT/src/components/MenuBar.css
+++ b/reactGPT/src/components/MenuBar.css
@@ -11,7 +11,7 @@
     z-index: 1000;
   
     /* Changes to center menubar */
-    justify-content: flex-start; /* new, may not be needed */
+    justify-content: space-between; 
     background-color: hsla(235, 20%, 15%, 0.9);
     max-width: 90%;
     margin-left: auto;
@@ -21,7 +21,7 @@
     height: 20px;
     align-items: center;
   }
-  
+
   .model-toggle-container {
     display: flex;
     align-items: center;
